⚙️ CONFIG: Se refactoriza el codigo